--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,3 +12,7 @@ body {
     width: 100%;
     height: 100vh;
 }
+
+input[type='text']::-webkit-calendar-picker-indicator {
+    display: none !important;
+}
