--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+.text-title {
+    @apply text-2xl font-bold underline decoration-primary underline-offset-8;
+}
 * {
     margin: 0;
     padding: 0;
